force-app/main/default/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Is_Dublet__c</fullName>
        <label>Is Dublet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Interested_in_Pension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Interested in Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lecture_Today__c</fullName>
        <formula>DATEVALUE(Foredragstid_og_dato__c) = TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lecture Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lost__c</fullName>
        <formula>IF(OR(ISPICKVAL(Status, &quot;Closed - not converted&quot;), ISPICKVAL(Status, &quot;Unqualified&quot;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Next_Call_Time_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to whether Next Call Time is Overdue</description>
        <label>Is Next Call Time Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Open__c</fullName>
        <formula>OR(
    ISPICKVAL(Status, &quot;New&quot;),
    ISPICKVAL(Status, &quot;Working&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owned_by_Current_User_or_a_Queue__c</fullName>
        <formula>OR(
    $User.Id = OwnerId,
    ISBLANK(Owner:User.Id)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owned by Current User or a Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owned_by_Queue_or_Meeting_Booker__c</fullName>
        <formula>BEGINS(OwnerId, &quot;00G&quot;) || 
ISPICKVAL( Owner:User.User_Role__c , &quot;Meeting Booker&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owned by Queue or Meeting Booker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Queue_or_User__c</fullName>
        <formula>IF(LEFT(Text_Owner_ID__c, 3) = &quot;00G&quot;, &quot;Queue&quot;, &quot;User&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner Queue or User?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Owner__c</fullName>
        <formula>IF( OwnerId = $User.Id,True,False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Re_booked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flags is set automatically from use of &quot;Re-booking&quot; button</inlineHelpText>
        <label>Is Re-booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Synced_to_Marketing_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the record has already been synchronized with Marketing Cloud. This field is updated during sync processes to track the synchronization status and ensure only the correct records are processed.</description>
        <inlineHelpText>Indicates whether the record has already been synchronized with Marketing Cloud. This field is updated during sync processes to track the synchronization status and ensure only the correct records are processed.</inlineHelpText>
        <label>Is Synced to Marketing Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeg_nsker_at_b_ndl_gge_arven__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeg ønsker at båndlægge arven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeg_nsker_en_fremtidsfuldmagt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeg ønsker en fremtidsfuldmagt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeg_nsker_en_generalfuldmagt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeg ønsker en generalfuldmagt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeg_nsker_s_reje_til_mine_b_rn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeg ønsker særeje til mine børn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeg_vil__c</fullName>
        <label>Jeg vil...</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undgå at staten bliver min værge i tilfælde af alvorlig sygdom</fullName>
                </value>
                <value>
                    <fullName>Undgå at mine børn risikerer at miste halvdelen af deres arv</fullName>
                </value>
                <value>
                    <fullName>Undgå en skævfordeling af arven</fullName>
                </value>
                <value>
                    <fullName>Selv styre hvem der skal arve mig</fullName>
                </value>
                <value>
                    <fullName>Undgå at mine børn får arven udbetalt for tidligt</fullName>
                </value>
                <value>
                    <fullName>Sikre min partner/ægtefælle mest muligt, efter min bortgang</fullName>
                </value>
                <value>
                    <fullName>Undgå at min partner/ægtefælle skal betale en stor sum penge ved min død</fullName>
                </value>
                <value>
                    <fullName>Undgå arveafgift til mine arvinger, i så vid udstrækning som det er muligt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jeg_vil_selv_styre_arvefordelingen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeg vil selv styre arvefordelingen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeg_vil_sikre_min_gtef_lle_via_gtepagt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeg vil sikre min ægtefælle via ægtepagt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kampagne_budskab__c</fullName>
        <label>Kampagne budskab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TEST</fullName>
                </value>
                <value>
                    <fullName>Gratis Testamente foredrag med lækker Kage &amp; Kaffe på Løgstør Parkhotel i Løgstør</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Restaurant Kareten i København S</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på ALFA BRYGHUS og Brasserie i Vejen</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Restaurant Mamamos i Nørresundby</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. Middag på Vilcon Hotel &amp; Konferencegaard</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Rindsholm Kro &amp; Hotel i Viborg</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Hotel Årslev Kro i Brabrand</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Cafe Sesa i Ishøj</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Pejsegaarden i Husum</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente, inkl. middag på Haderslev Golfrestaurant</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Hundested Bed &amp; Breakfast</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Lynæs Fisk &amp; Steakhouse</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Frederiksdal Fribad - ( Afholdt d. 24-10-2023 )</fullName>
                </value>
                <value>
                    <fullName>Gratis foredrag om arv og testamente inkl. middag på Bjerringbro Idræts-&amp; Kulturcenter - ( Afholdt d. 16-11-2023 )</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kampagnebudskab_Formula__c</fullName>
        <label>Kampagnebudskab Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kommentarer_Calendly__c</fullName>
        <label>Kommentarer (Calendly)</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kommentarer_Personligt_Calendly__c</fullName>
        <description>Dette felt viser kommentarer fra feltet i hver sælgers personlige mødelink</description>
        <label>Kommentarer - Personligt (Calendly)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kommentarer__c</fullName>
        <label>Kommentarer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L_nelead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lånelead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_ngstlevende_kunne_ndre_i_testamentet__c</fullName>
        <label>Længstlevende kunne ændre i testamentet?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landingpage__c</fullName>
        <label>Landingpage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Call_Time__c</fullName>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Clicked__c</fullName>
        <label>Last Email Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Opened__c</fullName>
        <label>Last Email Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Call_Time__c</fullName>
        <label>Last Inbound Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Reopened_Date__c</fullName>
        <label>Last Reopened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_SMS_Reminder_Sent_Date__c</fullName>
        <label>Last SMS Reminder Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_SMS_Reply__c</fullName>
        <label>Last SMS Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Action_on_Marketing_Email__c</fullName>
        <label>Latest Action on Marketing Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Latest Campaign)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Entry_Date__c</fullName>
        <label>Latest Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Latest Marketing Campaign)</relationshipLabel>
        <relationshipName>Marketing_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Marketing_Email__c</fullName>
        <label>Latest Marketing Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Marketing_Link_Clicked__c</fullName>
        <label>Latest Marketing Link Clicked</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Closure_SLA__c</fullName>
        <formula>IF(
  OR(
    ISBLANK(Days_to_Close_Lecture__c),
    Days_to_Close_Lecture__c &lt;= 0
  ),
  &quot;&quot;,
  IF(
    Days_to_Close_Lecture__c &gt; 14,
    &quot;Outside SLA&quot;,
    IF(
      OR(
        ISPICKVAL(Status, &quot;New&quot;),
        ISPICKVAL(Status, &quot;Working&quot;)
      ),
      &quot;Pending Within SLA&quot;,
      IF(
        AND(
          Days_to_Close_Lecture__c &lt;= 14,
          OR(
            ISPICKVAL(Status, &quot;Converted&quot;),
            ISPICKVAL(Status, &quot;Closed - Not Converted&quot;),
            ISPICKVAL(Status, &quot;Unqualified&quot;)
          )
        ),
        &quot;Within SLA&quot;,
        &quot;Outside SLA&quot;
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates SLA based on Days to Close (Lecture). Close within 14 days of Lecture, to stay within SLA.</inlineHelpText>
        <label>Lead Closure SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Group_Name__c</fullName>
        <label>Lead Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kampagne 2</fullName>
                </value>
                <value>
                    <fullName>Kampagne 3</fullName>
                </value>
                <value>
                    <fullName>DFJ B2B</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Kampagne 1</fullName>
                    <default>true</default>
                    <label>Kampagne 1</label>
                </value>
                <value>
                    <fullName>TD Kampagne 1</fullName>
                </value>
                <value>
                    <fullName>Genåbnet</fullName>
                </value>
                <value>
                    <fullName>Dublet Kampagne</fullName>
                </value>
                <value>
                    <fullName>Norrina</fullName>
                </value>
                <value>
                    <fullName>Nina</fullName>
                </value>
                <value>
                    <fullName>Denis</fullName>
                </value>
                <value>
                    <fullName>Flemming</fullName>
                </value>
                <value>
                    <fullName>Testamente Sverige</fullName>
                </value>
                <value>
                    <fullName>Lotte Gravers</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Andet</fullName>
                </value>
                <value>
                    <fullName>Parkeret</fullName>
                </value>
                <value>
                    <fullName>Dublet Kampagne DK</fullName>
                </value>
                <value>
                    <fullName>Dublet Kampagne SE</fullName>
                </value>
                <value>
                    <fullName>Mailkampagne</fullName>
                </value>
                <value>
                    <fullName>Facebook Burton</fullName>
                </value>
                <value>
                    <fullName>Kampagne DK</fullName>
                </value>
                <value>
                    <fullName>Kampagne SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <formula>IF(
  OR(
    ISBLANK(Foredragstid_og_dato__c),
    Foredragstid_og_dato__c &lt; DATETIMEVALUE(TEXT(YEAR(TODAY() - 1)) + &quot;-&quot; + TEXT(MONTH(TODAY() - 1)) + &quot;-&quot; + TEXT(DAY(TODAY() - 1)) + &quot; 00:00:00&quot;),
    Booking_Status_Formula__c = &quot;Cancelled&quot;
  ),
  IF(
    ISPICKVAL(Event_moedestatus_c__c, &quot;Tilmeldingsblanket&quot;), 1,
    IF(
      ISPICKVAL(UTM_Medium__c, &quot;PR Leads&quot;), 2,
      IF(
        Booking_Status_Formula__c = &quot;Cancelled&quot;, 3,
        IF(
          ISPICKVAL(Event_moedestatus_c__c, &quot;No Show&quot;), 4,
          IF(
            ISPICKVAL(Event_moedestatus_c__c, &quot;Show&quot;), 5,
            IF(
              ISPICKVAL(UTM_Medium__c, &quot;Findforsikring.dk&quot;), 6,
              IF(
                ISPICKVAL(UTM_Term__c, &quot;Pre-booking&quot;), 7,
                99
              )
            )
          )
        )
      )
    )
  ),
  NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Segment__c</fullName>
        <formula>IF(TEXT(UTM_Source__c) = &quot;Foredrag&quot;, &quot;Lecture&quot;,
   IF(OR(TEXT(UTM_Source__c) = &quot;Reference&quot;, 
         TEXT(UTM_Source__c) = &quot;Referral Program&quot;, 
         NOT(ISBLANK(TEXT(User_Created_Type__c)))),
      &quot;Referrals &amp; User Created&quot;,
      IF(AND(TEXT(UTM_Source__c) = &quot;Facebook&quot;, 
             TEXT(UTM_Medium__c) = &quot;PR Leads&quot;),
         &quot;PR Leads&quot;,
         &quot;Other&quot;
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Value__c</fullName>
        <label>Lead Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadtype__c</fullName>
        <label>Leadtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lecture_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lecture Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Lecture Campaign)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lecture_Date_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lecture Date Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lecture_Form_Invite_Status__c</fullName>
        <label>Lecture Form Invite Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invite sent</fullName>
                </value>
                <value>
                    <fullName>Reply received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lecture_Start_Time__c</fullName>
        <formula>LPAD(TEXT(MOD(HOUR(TIMEVALUE( Foredragstid_og_dato__c )) + 1, 24)), 2, &apos;0&apos;) &amp; &quot;:&quot; &amp; 
LPAD(TEXT(MINUTE(TIMEVALUE(Foredragstid_og_dato__c))), 2, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lecture Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lecturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lecturer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ledsagers_navn_Calendly__c</fullName>
        <label>Ledsagers navn (Calendly)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ledsagers_telefonnummer_Calendly__c</fullName>
        <label>Ledsagers telefonnummer (Calendly)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <formula>NOT(ISBLANK(telegenta__Lock_Time__c)) &amp;&amp; telegenta__Lock_Time__c &gt;= NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MB_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MB Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_de_Booket_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Emnet er booket i kalender hos rådgiver - sættes af mødebooker</inlineHelpText>
        <label>Møde Booket (i)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_de_Viderestillet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emnet er viderestillet til en medarbejder hos DFJ</description>
        <inlineHelpText>Emnet er viderestillet til en medarbejder hos DFJ</inlineHelpText>
        <label>Møde - Viderestillet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_de_booket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Møde booket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_de_booket_af__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Navn på mødebooker</description>
        <inlineHelpText>Navn på mødebooker</inlineHelpText>
        <label>Møde booket af</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>M_de_booket_d__c</fullName>
        <inlineHelpText>Dato for opkaldet for hvor mødet blev booket - Sættes af mødebooker</inlineHelpText>
        <label>Møde booket d.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_de_booket_til__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Hvem er mødet booket til - Sættes af mødebooker</inlineHelpText>
        <label>Møde booket til</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>M_debooker_unikt_kampagne_ID__c</fullName>
        <label>Mødebooker unikt kampagne ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TM&apos;er - Katja, Anisa, Line oa.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_debooking_Close__c</fullName>
        <formula>IF( M_debooking_Lead_staus__c = &quot;Mødebook&quot;,  M_de_booket_d__c ,  DATEVALUE(Closed_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mødebooking - Closed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_debooking_Lead_owner__c</fullName>
        <formula>IF( OR( M_de_Viderestillet__c = TRUE, M_de_Booket_Internal__c = TRUE),   M_de_booket_af__r.FirstName&amp;&quot; &quot;&amp; M_de_booket_af__r.LastName   ,  Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mødebooking - Lead owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_debooking_Lead_staus__c</fullName>
        <formula>IF( OR( M_de_Viderestillet__c = TRUE, M_de_Booket_Internal__c = TRUE),&quot;Mødebook&quot;,  TEXT( Status ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mødebooking - Lead staus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_debooking_feedback__c</fullName>
        <label>Mødebooking feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_destatus__c</fullName>
        <inlineHelpText>Sættes af mødebooker og rådgiver</inlineHelpText>
        <label>Mødestatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Møde afholdt</fullName>
                </value>
                <value>
                    <fullName>Møde ombooket</fullName>
                </value>
                <value>
                    <fullName>Møde aflyst</fullName>
                </value>
                <value>
                    <fullName>Møde ikke afholdt endnu</fullName>
                    <default>true</default>
                    <label>Møde ikke afholdt endnu</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailcampagin_member_rating__c</fullName>
        <label>Mailcampagin member rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Unit__c</fullName>
        <label>Market Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign</label>
        <referenceTo>Marketing_Campaign__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Email_Flow__c</fullName>
        <label>Marketing Email Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-in</fullName>
                </value>
                <value>
                    <fullName>Booking Cancelled</fullName>
                </value>
                <value>
                    <fullName>No show</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Flow_ID__c</fullName>
        <externalId>true</externalId>
        <label>Marketing Flow ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Meeting_Booked__c</fullName>
        <label>Marketing Meeting Booked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>cancelled1</fullName>
                </value>
                <value>
                    <fullName>cancel2</fullName>
                </value>
                <value>
                    <fullName>noshow1</fullName>
                </value>
                <value>
                    <fullName>show1</fullName>
                </value>
                <value>
                    <fullName>cancel1</fullName>
                </value>
                <value>
                    <fullName>cancel3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medbringes_ledsager_Calendly__c</fullName>
        <label>Medbringes ledsager? (Calendly)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Booker_Closed_Date__c</fullName>
        <formula>IF(
    NOT(ISBLANK(M_de_booket_d__c)),
    M_de_booket_d__c,
    IF(
        NOT(ISBLANK(Closed_Date__c)),
        DATEVALUE(Closed_Date__c),
        NULL
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Booker Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_booker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mødebooker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modtager_af_gavekort_Calendly__c</fullName>
        <label>Modtager af gavekort (Calendly)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modtager_af_gavekort_Tlf_Calendly__c</fullName>
        <label>Modtager af gavekort - Tlf (Calendly)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Marketing_Flow_End__c</fullName>
        <label>Most Recent Marketing Flow End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Marketing_Flow_Start__c</fullName>
        <label>Most Recent Marketing Flow Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Motivation_for_deltagelse_Calendly__c</fullName>
        <label>Motivation for deltagelse (Calendly)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moved_from_Billetto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moved from Billetto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movein_date__c</fullName>
        <label>Movein date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <label>Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <label>New Address</label>
        <length>160</length>
        <type>Text</type>
    </fields>
</CustomObject>